# simple-http-server

./: .gitignore  README.md  app.py  example.py  pyproject.toml  server.py
examples/: app.py
simple_http/: colors.py  errors.py  server.py
tests/: test_api_routes.py
