[tool.poetry]
name = "simple-http-server"
version = "0.1.0"
description = ""
authors = ["João Victor <johnvictorfs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"
autopep8 = "^1.4"
pytest = "^5.2"
requests = "^2.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
